samples/_failures_safe/1761478150_676a18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52008f00.c: In function ‘main’:
./samples/SAFE/__tmp_52008f00.c:127:10: error: expected declaration or statement at end of input
  127 |     enum MatrixOp op;
      |          ^~~~~~~~
